--- a/style.css
+++ b/style.css
@@ -134,7 +134,8 @@ a {
   grid-template-columns: repeat(3, 1fr);
   /* grid-auto-rows: minmax(150px, auto); */
   grid-template-rows: repeat(3, minmax(150px, auto));
-  transform: scale(0.6) rotateX(25deg) rotateY(22deg) rotateZ(10deg);
+  transform: scale(0.5) rotateZ(25deg);
+  margin-top: 3rem;
 }
 
 .task4 .div {
